namespace Script.Game
{
    /*
     * Constant parameters
     */
    public static class Constant
    {
        
        // Animation parameters
        public struct Animation
        {
            public static string ATTACK = "Attack";
            public static string DEFENSE = "Defense";
            public const string SPEED = "Speed";
        }
    }
}
